--- a/jalaram_cafe/index.html
+++ b/jalaram_cafe/index.html
@@ -37,6 +37,9 @@
     <link rel="stylesheet" href="assets/css/responsive.css" />
 
     <script src="assets/js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
+    <style>
+    
+    </style>
 
 </head>
 
@@ -274,38 +277,38 @@
                         <h3>Delicious</h3>
                     </div>
 
-                    <div class="single_pakeg_one text-right wow rotateInDownRight">
+                    <div class="text-right wow rotateInDownRight" style="margin: 10px;">
                         <div class="col-md-6 col-md-offset-6 col-sm-8 col-sm-offset-4">
                             <div class="single_pakeg_text">
                                 <div class="pakeg_title">
                                     <h4>Drinks & Namkeens</h4>
                                 </div>
-                                <ion-slides pager="true" :options="slideOpts">
+                                <ion-slides pager="true" :options="slideOpts" style="--bullet-background-active: brown;   --bullet-background: brown;">   
                                     <ion-slide>
-                                        <ul style="width: 100%;">
+                                        <ul style="width: 100%; font-size: 15px;">
                                             <li style="display: flex; justify-content: space-between;">
-                                                <span>Tea</span><span>₹ 20/-</span>
+                                                <span>Tea</span><span>20</span>
                                             </li>
                                             <li style="display: flex; justify-content: space-between;">
-                                                <span>Coffee</span><span>₹ 20/-</span>
+                                                <span>Coffee</span><span>20</span>
                                             </li>
                                             <li style="display: flex; justify-content: space-between;"><span>Sp.
-                                                    Coffee</span><span>₹ 30/-</span></li>
+                                                    Coffee</span><span>30</span></li>
                                             <li style="display: flex; justify-content: space-between;">
-                                                <span>Bornvita</span><span>₹ 50/-</span>
+                                                <span>Bornvita</span><span>50</span>
                                             </li>
                                         </ul>
                                     </ion-slide>
                                     <ion-slide>
-                                        <ul style="width: 100%;">
+                                        <ul style="width: 100%; font-size: 15px;">
                                             <li style="display: flex; justify-content: space-between;"><span>Oreo
-                                                    Shake</span><span>₹ 60/-</span></li>
+                                                    Shake</span><span>60</span></li>
                                             <li style="display: flex; justify-content: space-between;"><span>Red
-                                                    Bull</span><span>₹ MRP*</span></li>
+                                                    Bull</span><span>MRP*</span></li>
                                             <li style="display: flex; justify-content: space-between;"><span>Cold
-                                                    Drinks</span><span>₹ MRP*</span></li>
+                                                    Drinks</span><span>MRP*</span></li>
                                             <li style="display: flex; justify-content: space-between;"><span>Balaji
-                                                    Namkeens</span><span>₹ MRP*</span></li>
+                                                    Namkeens</span><span>MRP*</span></li>
                                         </ul>
                                     </ion-slide>
                                 </ion-slides>
@@ -313,41 +316,41 @@
                         </div>
                     </div>
 
-                    <div class="single_pakeg_two text-left wow rotateInDownLeft">
+                    <div class="text-left wow rotateInDownLeft" style="margin: 10px;">
                         <div class="col-md-6 col-sm-8">
                             <div class="single_pakeg_text">
                                 <div class="pakeg_title">
                                     <h4>Delicious Dishes </h4>
                                 </div>
 
-                                <ion-slides pager="true" :options="slideOpts">
+                                <ion-slides pager="true" :options="slideOpts" style="--bullet-background-active: brown;   --bullet-background: brown;">   
                                     <ion-slide>
-                                        <ul style="width: 100%;">
+                                        <ul style="width: 100%; font-size: 15px;">
                                             <li style="display: flex; justify-content: space-between;">
-                                                <span>Kurkure Chat</span><span>₹ 40/-</span>
+                                                <span>Kurkure Chat</span><span>40</span>
                                             </li>
                                             <li style="display: flex; justify-content: space-between;">
-                                                <span>Mix Mayonise Bhel</span><span>₹ 40/-</span>
+                                                <span>Mix Mayonise Bhel</span><span>40</span>
                                             </li>
                                             <li style="display: flex; justify-content: space-between;"><span>Allo Tiki
-                                                    Chat</span><span>₹ 50/-</span></li>
+                                                    Chat</span><span>50</span></li>
                                             <li style="display: flex; justify-content: space-between;">
-                                                <span>Kurkure Chat Cheese</span><span>₹ 60/-</span>
+                                                <span>Kurkure Chat Cheese</span><span>60</span>
                                             </li>
                                         </ul>
                                     </ion-slide>
                                     <ion-slide>
-                                        <ul style="width: 100%;">
-                                            <li style="display: flex; justify-content: space-between;"><span>Mix Mayonise Bhel</span><span>₹ 60/-</span></li>
-                                            <li style="display: flex; justify-content: space-between;"><span>French Fries</span><span>₹ 60/-</span></li>
-                                            <li style="display: flex; justify-content: space-between;"><span>Masala French Fries</span><span>₹ 70/-</span></li>
-                                            <li style="display: flex; justify-content: space-between;"><span>Tomato Twist Pasta</span><span>₹ 70/-</span></li>
+                                        <ul style="width: 100%; font-size: 15px;">
+                                            <li style="display: flex; justify-content: space-between;"><span>Mix Mayonise Bhel</span><span>60</span></li>
+                                            <li style="display: flex; justify-content: space-between;"><span>French Fries</span><span>60</span></li>
+                                            <li style="display: flex; justify-content: space-between;"><span>Masala French Fries</span><span>70</span></li>
+                                            <li style="display: flex; justify-content: space-between;"><span>Tomato Twist Pasta</span><span>70</span></li>
                                         </ul>
                                     </ion-slide>
                                     <ion-slide>
-                                        <ul style="width: 100%;">
-                                            <li style="display: flex; justify-content: space-between;"><span>Macroni Cheese Pasta</span><span>₹ 70/-</span></li>
-                                            <li style="display: flex; justify-content: space-between;"><span>Cheese Ball</span><span>₹ 100/-</span></li>
+                                        <ul style="width: 100%; font-size: 15px;">
+                                            <li style="display: flex; justify-content: space-between;"><span>Macroni Cheese Pasta</span><span>70</span></li>
+                                            <li style="display: flex; justify-content: space-between;"><span>Cheese Ball</span><span>100</span></li>
                                         </ul>
                                     </ion-slide>
                                 </ion-slides>
@@ -355,48 +358,72 @@
                         </div>
                     </div>
 
-                    <div class="single_pakeg_three text-left wow rotateInDownRight">
+                    <div class="text-left wow rotateInDownRight" style="margin: 10px;">
                         <div class="col-md-6 col-md-offset-6 col-sm-8 col-sm-offset-4">
                             <div class="single_pakeg_text">
                                 <div class="pakeg_title">
-                                    <h4>Desserts</h4>
+                                    <h4>Maggie</h4>
                                 </div>
-
-                                <ul>
-                                    <li style="display: flex; justify-content: space-between;"><span>Tuna Roast
-                                            Source</span><span>₹ 25/-</span></li>
-                                    <li style="display: flex; justify-content: space-between;"><span>Tuna Roast
-                                            Source</span><span>₹ 25/-</span></li>
-                                    <li style="display: flex; justify-content: space-between;"><span>Tuna Roast
-                                            Source</span><span>₹ 25/-</span></li>
-                                    <li style="display: flex; justify-content: space-between;"><span>Tuna Roast
-                                            Source</span><span>₹ 25/-</span></li>
-                                    <li style="display: flex; justify-content: space-between;"><span>Tuna Roast
-                                            Source</span><span>₹ 25/-</span></li>
-                                </ul>
+                                <li style="display: flex; justify-content: space-between; font-size: 8px; font-style: italic; font-weight: bold;"><span></span><span>Regular/Cheese</span></li>
+                                <ion-slides pager="true" :options="slideOpts" style="--bullet-background-active: brown;   --bullet-background: brown;">   
+                                <ion-slide>
+                                    <ul style="width: 100%; font-size: 15px;">
+                                        <li style="display: flex; justify-content: space-between;"><span>Regular</span><span>30/50</span></li>
+                                        <li style="display: flex; justify-content: space-between;"><span>Masala</span><span>35/55</span></li>
+                                        <li style="display: flex; justify-content: space-between;"><span>Schezwan</span><span>40/60</span></li>
+                                        <li style="display: flex; justify-content: space-between;"><span>Kurkure Masala</span><span>45/65</span></li>
+                                    </ul>
+                                </ion-slide>
+                                <ion-slide>
+                                    <ul style="width: 100%; font-size: 15px;">
+                                        <li style="display: flex; justify-content: space-between;"><span>Vegitable</span><span>50/70</span></li>
+                                        <li style="display: flex; justify-content: space-between;"><span>Veg. Schezwan</span><span>55/75</span></li>
+                                        <li style="display: flex; justify-content: space-between;"><span>Veg. Butter Masala</span><span>60/80</span></li>
+                                        <li style="display: flex; justify-content: space-between;"><span>Veg. Panir Corn</span><span>65/85</span></li>
+                                    </ul>
+                                </ion-slide>
+                                <ion-slide>
+                                    <ul style="width: 100%; font-size: 15px;">
+                                        <li style="display: flex; justify-content: space-between;"><span>Jalaram Special</span><span>--/100</span></li>
+                                    </ul>
+                                </ion-slide>
+                            </ion-slides>
                             </div>
                         </div>
                     </div>
 
-                    <div class="single_pakeg_two text-left wow rotateInDownLeft">
+                    <div class="text-left wow rotateInDownLeft" style="margin: 10px;">
                         <div class="col-md-6 col-sm-8">
                             <div class="single_pakeg_text">
                                 <div class="pakeg_title">
-                                    <h4>Main course </h4>
+                                    <h4>Sandwich</h4>
                                 </div>
-
-                                <ul>
-                                    <li style="display: flex; justify-content: space-between;"><span>Tuna Roast
-                                            Source</span><span>₹ 25/-</span></li>
-                                    <li style="display: flex; justify-content: space-between;"><span>Tuna Roast
-                                            Source</span><span>₹ 25/-</span></li>
-                                    <li style="display: flex; justify-content: space-between;"><span>Tuna Roast
-                                            Source</span><span>₹ 25/-</span></li>
-                                    <li style="display: flex; justify-content: space-between;"><span>Tuna Roast
-                                            Source</span><span>₹ 25/-</span></li>
-                                    <li style="display: flex; justify-content: space-between;"><span>Tuna Roast
-                                            Source</span><span>₹ 25/-</span></li>
-                                </ul>
+                                <ion-slides pager="true" :options="slideOpts" style="--bullet-background-active: brown;   --bullet-background: brown;">  
+                                    <ion-slide>
+                                        <ul style="width: 100%; font-size: 15px;">
+                                            <li style="display: flex; justify-content: space-between;"><span>Bread Butter</span><span>20</span></li>
+                                            <li style="display: flex; justify-content: space-between;"><span>Bread Toast</span><span>30</span></li>
+                                            <li style="display: flex; justify-content: space-between;"><span>Bread Butter Cheese</span><span>40</span></li>
+                                            <li style="display: flex; justify-content: space-between;"><span>Cheese Grill Bread</span><span>50</span></li>
+                                        </ul>
+                                    </ion-slide>
+                                    <ion-slide>
+                                        <ul style="width: 100%; font-size: 15px;">
+                                            <li style="display: flex; justify-content: space-between;"><span>Veg. Mayonise</span><span>60</span></li>
+                                            <li style="display: flex; justify-content: space-between;"><span>Veg. Cheese</span><span>70</span></li>
+                                            <li style="display: flex; justify-content: space-between;"><span>Veg. Cheese Mayo</span><span>75</span></li>
+                                            <li style="display: flex; justify-content: space-between;"><span>Cheese Makhani</span><span>80</span></li>
+                                        </ul>
+                                    </ion-slide>
+                                    <ion-slide>
+                                        <ul style="width: 100%; font-size: 15px;">
+                                            <li style="display: flex; justify-content: space-between;"><span>Panir Makhani</span><span>80</span></li>
+                                            <li style="display: flex; justify-content: space-between;"><span>Chocolate Sandwich</span><span>80</span></li>
+                                            <li style="display: flex; justify-content: space-between;"><span>Jalaram Special</span><span>100</span></li>
+                                        </ul>
+                                    </ion-slide>
+                                    </ion-slides>
+                               
                             </div>
                         </div>
                     </div>
