--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                   <li class="nav-item"><a class="nav-link" href="https://twitter.com/mundrawala18" title="Twitter"><i class="fab fa-twitter"></i><span class="menu-title sr-only">Twitter</span></a></li>
                   <li class="nav-item"><a class="nav-link" href="https://www.facebook.com/mundrawala18" title="Facebook"><i class="fab fa-facebook"></i><span class="menu-title sr-only">Facebook</span></a></li>
                   <li class="nav-item"><a class="nav-link" href="https://www.instagram.com/m.mundrawala/" title="Instagram"><i class="fab fa-instagram"></i><span class="menu-title sr-only">Instagram</span></a></li>
-                  <li class="nav-item"><a class="nav-link" href="https://www.linkedin.com/in/murtaza-m-624091128" title="LinkedIn"><i class="fab fa-linkedin"></i><span class="menu-title sr-only">LinkedIn</span></a></li>
+                  <li class="nav-item"><a class="nav-link" href="https://www.linkedin.com/in/mundrawala" title="LinkedIn"><i class="fab fa-linkedin"></i><span class="menu-title sr-only">LinkedIn</span></a></li>
                 </ul>
               </nav>
             </div>
@@ -356,7 +356,7 @@
             <li class="nav-item"><a class="nav-link" href="https://twitter.com/mundrawala18" title="Twitter"><i class="fab fa-twitter"></i><span class="menu-title sr-only">Twitter</span></a></li>
                   <li class="nav-item"><a class="nav-link" href="https://www.facebook.com/mundrawala18" title="Facebook"><i class="fab fa-facebook"></i><span class="menu-title sr-only">Facebook</span></a></li>
                   <li class="nav-item"><a class="nav-link" href="https://www.instagram.com/m.mundrawala/" title="Instagram"><i class="fab fa-instagram"></i><span class="menu-title sr-only">Instagram</span></a></li>
-                  <li class="nav-item"><a class="nav-link" href="https://www.linkedin.com/in/murtaza-m-624091128" title="LinkedIn"><i class="fab fa-linkedin"></i><span class="menu-title sr-only">LinkedIn</span></a></li>
+                  <li class="nav-item"><a class="nav-link" href="https://www.linkedin.com/in/mundrawala" title="LinkedIn"><i class="fab fa-linkedin"></i><span class="menu-title sr-only">LinkedIn</span></a></li>
           </ul>
         </nav>
       </div>
