--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </noscript>
     <script async src='https://stackwhats.com/pixel/7f02af4b54cb558c3db4b7abea5cc0'></script>  
     </head>
-  <body id="mrtz">
+  <body id="mrtz" ondragstart="return false"> 
     
    
     <header class="bg-light">
