--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-5 offset-md-1" data-aos="fade-left" data-aos-delay="100"><img class="avatar img-fluid mt-2" src="images/mundrawala.png" width="400" height="400" alt="Walter Patterson"/></div>
+      <div class="col-md-5 offset-md-1" data-aos="fade-left" data-aos-delay="100"><img class="avatar img-fluid mt-2" src="images/mundrawala.png" width="400" height="400" alt="Mundrawala"/></div>
     </div>
   </div>
 </div>
