--- a/upi/index.html
+++ b/upi/index.html
@@ -91,7 +91,7 @@ console.log(price);
     
 <script>
   var upi = document.getElementById('upi');
-  upi.setAttribute("href", "upi://pay?pa=UPIID@oksbi&amp;pn=FNAME SNAME K&amp;cu=INR&amp; am=5000");
+  upi.setAttribute("href", "upi://pay?pa=mundrawala@uboi&amp;pn=FNAME SNAME K&amp;cu=INR&amp; am=5000");
 </script>
            
 
