--- a/upi/index.html
+++ b/upi/index.html
@@ -91,7 +91,7 @@ console.log(price);
     
 <script>
   var upi = document.getElementById('upi');
-  upi.setAttribute("href", "upi://pay?pa=arihant@upi&pn=Arihant&am=500&cu=INR");
+  upi.setAttribute("href", "upi://pay?pa=arihant@upi&pn=Arihant&am="+price+"&cu=INR");
 </script>
            
 
