--- a/44/index.html
+++ b/44/index.html
@@ -93,7 +93,7 @@ console.log(price);
   var upi = document.getElementById('upi');
   var id = 'abhay2770@pingpay' // change UPI from here
 
-  upi.setAttribute("href", "upi://pay?pa="+id+"&pn=Arihant&am="+price);
+  upi.setAttribute("href", "upi://pay?pa="+id+"&pn=Arihant&am=15");
 </script>
            
 
