--- a/upi/index.html
+++ b/upi/index.html
@@ -93,7 +93,7 @@ console.log(price);
   var upi = document.getElementById('upi');
   var id = 'abhay2770@pingpay' // change UPI from here
 
-  upi.setAttribute("href", "upi://pay?pa=mundrawala@uboi&pn=Unknown Payee&tn=InvDt. 10-Mar-2022; Total Inv Val. 1; Taxable Value. 1&am=1&mode=01");
+  upi.setAttribute("href", "upi://pay?pa="+id+"&am="+price);
 </script>
            
 
