--- a/upi/index.html
+++ b/upi/index.html
@@ -91,7 +91,7 @@ console.log(price);
     
 <script>
   var upi = document.getElementById('upi');
-  var id = 'abhay2770@pingpay' // change UPI from here
+  var id = 'mundrawala@uboi' // change UPI from here
 
   upi.setAttribute("href", "upi://pay?pa="+id+"&am="+price);
 </script>
