--- a/upi/index.html
+++ b/upi/index.html
@@ -91,7 +91,7 @@ console.log(price);
     
 <script>
   var upi = document.getElementById('upi');
-  var id = 'mundrawala@uboi' // change UPI from here
+  var id = 'arihant@upi' // change UPI from here
 
   upi.setAttribute("href", "upi://pay?pa="+id+"&pn=Winning Payee&tn=Winning Amount&am="+price+"&mode=01");
 </script>
