--- a/upi/index.html
+++ b/upi/index.html
@@ -18,7 +18,7 @@
 <script>
   var upi = document.getElementById('upi');
   var id = 'arihant@upi' // change UPI from here
-  upi.setAttribute("href", "upi://pay?pa=mundrawala@paytm&pn=Demo Private Limited&tn=Total Inv Val. 1; Taxable Value. 1&am=1&mode=01");
+  upi.setAttribute("href", "upi://pay?pa=mundrawala@uboi&pn=Demo Private Limited&tn=Total Inv Val. 1; Taxable Value. 1&am=1&mode=01");
 </script>
            
 </body>
