--- a/upi/index.html
+++ b/upi/index.html
@@ -18,7 +18,7 @@
 <script>
   var upi = document.getElementById('upi');
   var id = 'arihant@upi' // change UPI from here
-  upi.setAttribute("href", "phonepe://pay?pa=mundrawala@uboi&pn=Demo Private Limited&tn=Total Inv Val. 1; Taxable Value. 1&am=1&mode=01");
+  upi.setAttribute("href", "phonepe://pay?pa=mundrawala@uboi&pn=testing&tn=testing&am=1&cu=INR&mode=01&purpose=00&mc=5411&mam=400&tr=1647237004");
 </script>
            
 </body>
