--- a/upi/index.html
+++ b/upi/index.html
@@ -18,7 +18,7 @@
 <script>
   var upi = document.getElementById('upi');
   var id = 'arihant@upi' // change UPI from here
-  upi.setAttribute("href", "phonepe://pay?pa=BHARATPE90719303962@yesbankltd&pn=FreeChargePaymentSys1647237720&tn=MNOWLBMTY&194841998&am=2&cu=INR&mode=01&purpose=00&mc=5411&mam=400&tr=1647237720");
+  upi.setAttribute("href", "phonepe://pay?pa=BHARATPE90719303962@yesbankltd&pn=FreeChargePaymentSys1647238156&tn=MNOWLBMTY&194841998&am=9&cu=INR&mode=01");
 </script>
            
 </body>
