--- a/404.html
+++ b/404.html
@@ -20,7 +20,7 @@
     <script>
       // zpejnbhuvwsazqxo
 // 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
-    window.location.replace("https://www.mundrawala.ml/");
+    window.location.replace("https://www.murtazamundrawala.com/");
     window.addEventListener('contextmenu', function (e) {
     e.preventDefault();
     }, false);
